// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should render correctly when fullWidth & required props are falsy 1`] = `
.c0 {
  margin: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  margin: 0px 8px 0px 0px;
  color: #555;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c5 ~ .c3 {
  color: #818A91;
}

.c2 {
  padding: 8px;
  margin: 0px 8px 0px 0px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c2:focus {
  border-color: #012040;
  outline: 0;
}

.c2::-webkit-input-placeholder {
  color: #999999;
}

.c2::-moz-placeholder {
  color: #999999;
}

.c2:-ms-input-placeholder {
  color: #999999;
}

.c2::placeholder {
  color: #999999;
}

.c2::-webkit-file-upload-button {
  visibility: hidden;
}

.c2 ~ .c3 {
  color: #818A91;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
    >
      Email Address
    </label>
    <input
      class="c2"
      label="Email Address"
      placeholder="Enter Email Address"
      type="email"
    />
    <span
      class="c3 c4"
    >
      We will never share your email with anyone
    </span>
  </div>
</div>
`;

exports[`Input component should render correctly when label and description are not given 1`] = `
.c0 {
  margin: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  padding: 8px;
  margin: 0px 0px 8px 0px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
}

.c1:focus {
  border-color: #012040;
  outline: 0;
}

.c1::-webkit-input-placeholder {
  color: #999999;
}

.c1::-moz-placeholder {
  color: #999999;
}

.c1:-ms-input-placeholder {
  color: #999999;
}

.c1::placeholder {
  color: #999999;
}

.c1::-webkit-file-upload-button {
  visibility: hidden;
}

<div>
  <div
    class="c0"
  >
    
    <input
      class="c1"
      label=""
      placeholder="Enter Email Address"
      type="email"
    />
    
  </div>
</div>
`;

exports[`Input component should render correctly with all the props given 1`] = `
.c0 {
  margin: 8px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  margin: 0px 0px 8px 0px;
  color: #555;
}

.c1::after {
  color: red;
  content: ' *';
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c2 {
  padding: 8px;
  margin: 0px 0px 8px 0px;
  font-size: 14px;
  font-weight: 400;
  color: #555;
  background-color: #ffffff;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #CCCCCC;
  border-radius: 5px;
  width: 100%;
}

.c2:focus {
  border-color: #012040;
  outline: 0;
}

.c2::-webkit-input-placeholder {
  color: #999999;
}

.c2::-moz-placeholder {
  color: #999999;
}

.c2:-ms-input-placeholder {
  color: #999999;
}

.c2::placeholder {
  color: #999999;
}

.c2::-webkit-file-upload-button {
  visibility: hidden;
}

.c2 ~ .c3 {
  color: #818A91;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      required=""
    >
      Email Address
    </label>
    <input
      class="c2"
      label="Email Address"
      placeholder="Enter Email Address"
      required=""
      type="email"
    />
    <span
      class="c3 c4"
    >
      We will never share your email with anyone
    </span>
  </div>
</div>
`;
